<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AeroGroundstation</string>
    <string name="mapboxToken">pk.eyJ1IjoiYWVyb2Rlc2lnbiIsImEiOiJjam9sczI0bjMwM3E4M2twMXk0NG93YXg1In0.jYhWqqiBnn4O4KrLImf-Gg</string>

    <!-- Main activity UI element strings -->
    <string name="mainActivityBottomNavigationOption1Text">Map</string>
    <string name="mainActivityBottomNavigationOption2Text">Path</string>
    <string name="mainActivityBottomNavigationOption3Text">Targets</string>
    <string name="mainActivityBottomNavigationOption4Text">Payload</string>
    <string name="mainActivityBottomNavigationOption5Text">Attitude</string>
    <string name="initConfigRadioButton1Text">Configuration 1</string>
    <string name="initConfigRadioButton2Text">Configuration 2</string>
    <string name="initConfigRadioButton3Text">Configuration 3</string>
    <string name="initConfigRadioGroupText">Choose Configuration</string>
    <string name="initConfigStartButtonText">Select</string>
    <string name="config1PreviewText">Build for competition</string>
    <string name="config2PreviewText">Debug build: Sends debug message instead of app message</string>
    <string name="config3PreviewText">Debug build: Cleared database</string>
    <string name="mainActivitySpeedDialOption1Text">Location</string>
    <string name="mainActivitySpeedDialOption2Text">Record</string>
    <string name="mainActivitySpeedDialOption3Text">Bluetooth</string>
    <string name="mainActivitySpeedDialOption4Text">Offline Maps</string>

    <!-- Initial configuration strings -->
    <string name="initConfigDatabaseClearPrompt">Are you sure you want to clear the database?</string>
    <string name="initConfigDatabaseClearPromptAffirmativePrompt">Yes</string>
    <string name="initConfigDatabaseClearPromptNegativePrompt">No</string>
    <string name="initConfigDatabaseClearPromptAffirmativeToast">Clearing database</string>
    <string name="initConfigDatabaseClearPromptNegativeToast">Database not cleared</string>
    <string name="initConfigDatabaseClearDialogTitle">Clear Database</string>

    <string name="motorSpeedDialOption1Text">Water</string>
    <string name="motorSpeedDialOption2Text">Habitat</string>
    <string name="motorSpeedDialOption3Text">Gliders</string>
    <string name="motorSpeedDialOption4Text">G1 Pitch</string>
    <string name="motorSpeedDialOption5Text">G2 Pitch</string>

    <string name="mainActivityNavigationDrawerCalibrationItem1Text">Calibrate IMU</string>
    <string name="mainActivityNavigationDrawerCalibrationItem2Text">Calibrate Barometer</string>
    <string name="mainActivityNavigationDrawerCalibrationItem3Text">Calibrate GPS</string>
    <string name="mainActivityNavigationDrawerLogItem1Text">Log 1</string>
    <string name="mainActivityNavigationDrawerLogItem2Text">Log 2</string>
    <string name="mainActivityNavigationDrawerLogItem3Text">Log 3</string>
    <string name="mainActivityStatusTabDescription">Status</string>
    <string name="mainActivityNavigationHeaderText">Groundstation</string>
    <string name="mainActivityNavigationSpinnerPrompt">Menus</string>
    <string-array name="mainActivityNavigationSpinnerItems">
        <item>Calibration</item>
        <item>Logs</item>
    </string-array>

    <!-- Offline Maps Strings -->
    <string name="OfflineMapButton">Load Maps</string>
    <string name="OfflineMapDownloadButton">Download</string>
    <string name="OfflineMapListButton">List</string>
    <string name="OfflineMapsSetRegionNameHint">Set Region Name</string>
    <string name="OfflineMapsDownloadRegionDialogTitle">Download Region</string>
    <string name="OfflineMapsDownloadRegionDialogMessage">Name the region to be downloaded</string>
    <string name="OfflineMapsDownloadRegionDialogPositive">Create</string>
    <string name="OfflineMapsDownloadRegionDialogToast">No</string>
    <string name="OfflineMapsDownloadRegionDialogCancel">Cancel</string>
    <string name="OfflineMapsDownloadCompleteProgress">Done</string>
    <string name="OfflineMapsRegionListNoRegionsToast">No Regions Downloaded Yet</string>
    <string name="OfflineMapsRegionListDialogTitle">Regions</string>
    <string name="OfflineMapsRegionListDialogPositive">Select</string>
    <string name="OfflineMapsRegionListDialogNeutralButton">Delete</string>
    <string name="OfflineMapsDeleteRegionToast">Region Deleted</string>
    <string name="OfflineMapsRegionListDialogNegative">Cancel</string>
    <string name="OfflineMapsRegionNameFormat">%d</string>

    <!-- Current Location Strings -->
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="locationButtonText">Location</string>
    <string name="currentLocationButtonText">Current Location</string>

    <string name="secure_UUID">00001101-0000-1000-8000-00805F9B34FB</string>
    <string name="insecure_UUID">00001101-0000-1000-8000-00805F9B34FB</string>
    <string name="bluetooth_sendMsgButtonText">Send</string>
    <string name="bluetooth_secureConnectOptionText">Secure Connect</string>
    <string name="bluetooth_insecureConnectOptionText">Insecure Connect</string>
    <string name="bluetooth_discoverableOptionText">Turn on Discoverability</string>
    <string name="bluetooth_notConnectedToast">Not connected</string>
    <string name="bluetooth_titleConnectedTo">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="bluetooth_titleNotConnectedTo"> Not connected</string>
    <string name="bluetooth_btNotEnabledToast">Bluetooth not enabled</string>

    <string name="bluetooth_scanning">scanning for devices...</string>
    <string name="bluetooth_selectDevice">select a device to connect</string>
    <string name="bluetooth_nonePaired">No devices have been paired</string>
    <string name="bluetooth_noneFound">No devices found</string>
    <string name="bluetooth_titlePairedDevices">Paired Devices</string>
    <string name="bluetooth_titleOtherDevices">Other Available Devices</string>
    <string name="bluetooth_buttonScan">Scan for devices</string>

    <!-- Flight path strings -->
    <string name="flightPathForwardButtonContentDescription">Move to next point</string>
    <string name="flightPathBackwardButtonContentDescription">Move to previous point</string>
    <string name="flightPathPlayButtonContentDescription">Play path</string>
    <string name="flightPathAltitudeFormatString">%1$.2f ft</string>
    <string name="flightPathSpeedFormatString">%1$.2f ft/s</string>
    <string name="flightPathHeadingFormatString">%1$.2f deg</string>
    <string name="flightPathRollFormatString">%1$.2f deg</string>
    <string name="flightPathPitchFormatString">%1$.2f deg</string>
    <string name="flightPathYawFormatString">%1$.2f deg</string>
    <string name="flightPathDataText">Loading &#8230;</string>







</resources>
